# VoxelGame

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  index.html  params.json
QtApp/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
dependencies/: CMakeLists.txt
documentation/: about.aux  about.tex
documentation/about/: about.tex
librecraft/: CMakeLists.txt  Doxyfile
librecraft/dependencies/: CMakeLists.txt
librecraft/doc/: MileStone1  Random  Random.orig  TODO  TODO Completed  TODO_Assigned  TODO_BUGS  TODO_Completed
librecraft/scripts/: .clang-format  build.sh  buildAllTargets.sh  buildRelease.sh  eclipseSetup.sh  format.sh  lathund.txt  loc.sh  runBeforeCommit.sh  runCppCheck.sh  runCubeDemo.sh  runCubeMapDemo.sh  runFontDemo.sh  runGame.sh  runGuiDemo.sh  runRelease.sh  runSpriteDemo.sh  runTextureArrayDemo.sh  runTextureDemo.sh  setupAllTargets.sh  setupBuild.sh  setupBuild.sh~  setupBuildDebug.sh  setupBuildNoWarnings.sh  setupBuildRelease.sh  setupBuildUnitTest.sh  setupDebugBuild.sh  useClang.sh  useGcc.sh
librecraft/scripts/demo/: runCubeDemo.sh  runCubeMapDemo.sh  runFontDemo.sh  runGuiDemo.sh  runShadowMapDemo.sh  runSpriteDemo.sh  runTextureArrayDemo.sh  runTextureDemo.sh  runXmlDemo.sh
librecraft/src/: docTestDefine.h  game.cpp  game.h  iGameState.h  inGame.cpp  inGame.h  main.cpp  mainMenu.cpp  mainMenu.h  settings.cpp  settings.h  voxel.h
librecraft/src/config/: data.cpp  data.h
librecraft/src/demo/: arrayTextureDemo.cpp  arrayTextureDemo.h  billboardDemo.h  cubeDemo.cpp  cubeDemo.h  cubeMapDemo.cpp  cubeMapDemo.h  demoMain.cpp  fontDemo.cpp  fontDemo.h  frustumDemo.h  guiDemo.cpp  guiDemo.h  iDemo.h  libNoiseDemo.h  playerCollisionDemo.cpp  shadowMapDemo.h  spriteDemo.cpp  spriteDemo.h  textureDemo.cpp  textureDemo.h  xmlDemo.h
librecraft/src/dependencies/libnoise/: basictypes.h  exception.h  interp.h  latlon.cpp  latlon.h  mathconsts.h  misc.h  noisegen.cpp  noisegen.h  vectortable.h
librecraft/src/dependencies/libnoise/model/: cylinder.cpp  cylinder.h  line.cpp  line.h  model.h  plane.cpp  plane.h  sphere.cpp  sphere.h
librecraft/src/dependencies/libnoise/module/: abs.cpp  abs.h  add.cpp  add.h  billow.cpp  billow.h  blend.cpp  blend.h  cache.cpp  cache.h  checkerboard.cpp  checkerboard.h  clamp.cpp  clamp.h  const.cpp  const.h  curve.cpp  curve.h  cylinders.cpp  cylinders.h  displace.cpp  displace.h  exponent.cpp  exponent.h  invert.cpp  invert.h  max.cpp  max.h  min.cpp  min.h  modulebase.cpp  modulebase.h  multiply.cpp  multiply.h  perlin.cpp  perlin.h  power.cpp  power.h  ridgedmulti.cpp  ridgedmulti.h  (+18 more)
librecraft/src/dependencies/tinyXml2/: tinyxml2.cpp  tinyxml2.h
librecraft/src/graphics/: camera.cpp  camera.h  chunkBatcher.cpp  chunkBatcher.h  cubeBatcher.cpp  cubeBatcher.h  cubeMap.cpp  cubeMap.h  fontMeshBuilder.cpp  fontMeshBuilder.h  frustum.cpp  frustum.h  graphicalChunk.cpp  graphicalChunk.h  graphicsManager.cpp  graphicsManager.h  resources.cpp  resources.h  shaderProgram.cpp  shaderProgram.h  sprite.cpp  sprite.h  spriteBatcher.cpp  spriteBatcher.h  texturedCube.cpp  texturedCube.h  transform.cpp  transform.h  viewDirection.cpp  viewDirection.h
librecraft/src/graphics/mesh/: iMesh.h  meshElement.cpp  meshElement.h
librecraft/src/graphics/texture/: texture.cpp  texture.h  textureArray.cpp  textureArray.h  textureCubeMap.cpp  textureCubeMap.h
librecraft/src/gui/: CubeBar.cpp  CubeBar.h  cubeBar.cpp  cubeBar.h  guiUtil.cpp  guiUtil.h  image.cpp  image.h  mouse.cpp  mouse.h  terminal.cpp  terminal.h
librecraft/src/gui/widget/: TODO.txt  abstractWidget.cpp  abstractWidget.h  button.cpp  button.h  checkButton.cpp  checkButton.h  iWidget.h  label.cpp  label.h  selectableList.cpp  selectableList.h  slider.cpp  slider.h  textArea.cpp  textArea.h  textInput.cpp  textInput.h  toggleButton.cpp  toggleButton.h  widgetGroup.cpp  widgetGroup.h
librecraft/src/model/world/: explosionEvent.h  explosions.h  iworldObject.h
librecraft/src/model/world/chunk/: chunk.cpp  chunk.h  chunkManager.cpp  chunkManager.h  creationOptions.cpp  creationOptions.h
librecraft/src/model/world/entity/: aabb.cpp  aabb.h  footStepSoundPlayer.cpp  footStepSoundPlayer.h  ientity.h  player.cpp  player.h
librecraft/src/model/world/terrainGen/: noiseMixer.h  terrainGenerator.cpp  terrainGenerator.h
librecraft/src/model/world/terrainGen/libnoise/: latlon.cpp  latlon.h  noise.h
librecraft/src/model/world/terrainGen/libnoise/model/: cylinder.h  line.cpp  line.h  plane.cpp  sphere.cpp
librecraft/src/model/world/terrainGen/libnoise/module/: abs.cpp  add.cpp  billow.cpp  blend.cpp  cache.h  const.h  curve.cpp  cylinders.cpp  displace.h  invert.h  min.cpp  module.h  modulebase.h  multiply.cpp  multiply.h  perlin.h  ridgedmulti.cpp  scalebias.cpp  scalebias.h  scalepoint.h  select.cpp  select.h  spheres.cpp  terrace.cpp  translatepoint.cpp  turbulence.cpp  turbulence.h  voronoi.h
librecraft/src/model/world/timeAndWeather/: timeCycle.cpp  timeCycle.h
librecraft/src/util/: checkSystem.h  fpsManager.cpp  fpsManager.h  globalResources.cpp  globalResources.h  input.cpp  input.h  performance.cpp  performance.h  settingsPersistence.cpp  settingsPersistence.h  soundPlayer.cpp  soundPlayer.h  trie.h  voxel.cpp  voxel.h  worldMeta.h
resources/font/: FontCreator.java  font1.txt
resources/skybox/: credits
scripts/: build.sh  eclipseSetup.sh  runChunkDemo.sh  runCubeDemo.sh  runGuiDemo.sh  runPlayerCollisionDemo.sh  runTextureArrayDemo  runTextureDemo.sh
src/: game.cpp  game.h  inGame.cpp  inGame.h  main.cpp  mainMenu.cpp  mainMenu.h  voxel.h
src/config/: chunkData.h  cubeData.h  data.cpp  data.h
src/demo/: arrayTextureDemo.cpp  arrayTextureDemo.h  chunkDemo.cpp  chunkDemo.h  cubeDemo.cpp  cubeDemo.h  cubeMapDemo.cpp  cubeMapDemo.h  fontDemo.cpp  fontDemo.h  guiDemo.cpp  guiDemo.h  iDemo.h  playerCollisionDemo.cpp  playerCollisionDemo.h  spriteDemo.cpp  spriteDemo.h  textureDemo.cpp  textureDemo.h
src/graphics/: arrayTexture.h  camera.cpp  camera.h  chunkBatcher.cpp  chunkBatcher.h  cubeBatcher.h  (+28 more)
(+69 files in other folders)
